# pre-commit2junit

./: Cargo.toml
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml
src/: main.rs
tests/: convert_test.rs  pc-env1-diff.fixture  pc-env1.fixture
tests/pc-env1/: .pre-commit-config.yaml
