[package]
name = "pre-commit2junit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.0"
junit-report = "0.7.0"
regex = "1.5.4"

[dev-dependencies]
assert_cmd = "2.0.4"
pretty_assertions = "1.1.0"
